applications/home-automation/hass/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hass
spec:
  hostnames:
  - hass.quido.me
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-internal
    namespace: networking
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: hass
      port: 8123
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
